add cifar10 downloader, tf datasets, tf eager, tf estimator

--- a/main.ipynb
+++ b/main.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -26,21 +26,22 @@
     "import random\n",
     "from sklearn import preprocessing\n",
     "\n",
-    "import tensorflow as tf"
+    "import tensorflow as tf\n",
+    "from tensorflow.contrib import eager as tfe "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tf.__version__: 1.7.0\n",
-      "tf.keras.__version__: 2.1.5-tf\n",
-      "keras.__version__: 2.1.5\n"
+      "tf.__version__: 1.9.0-rc0\n",
+      "tf.keras.__version__: 2.1.6-tf\n",
+      "keras.__version__: 2.2.0\n"
      ]
     }
    ],
@@ -48,6 +49,122 @@
     "print('tf.__version__:', tf.__version__)\n",
     "print('tf.keras.__version__:', tf.keras.__version__)\n",
     "print('keras.__version__:', keras.__version__)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Simple model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "backend: tensorflow\n",
+      "class_name: Sequential\n",
+      "config:\n",
+      "- class_name: Dense\n",
+      "  config:\n",
+      "    activation: relu\n",
+      "    activity_regularizer: null\n",
+      "    bias_constraint: null\n",
+      "    bias_initializer:\n",
+      "      class_name: Zeros\n",
+      "      config: {}\n",
+      "    bias_regularizer: null\n",
+      "    kernel_constraint: null\n",
+      "    kernel_initializer:\n",
+      "      class_name: VarianceScaling\n",
+      "      config: {distribution: uniform, mode: fan_avg, scale: 1.0, seed: null}\n",
+      "    kernel_regularizer: null\n",
+      "    name: dense_10\n",
+      "    trainable: true\n",
+      "    units: 64\n",
+      "    use_bias: true\n",
+      "- class_name: Dense\n",
+      "  config:\n",
+      "    activation: relu\n",
+      "    activity_regularizer: null\n",
+      "    bias_constraint: null\n",
+      "    bias_initializer:\n",
+      "      class_name: Zeros\n",
+      "      config: {}\n",
+      "    bias_regularizer: null\n",
+      "    kernel_constraint: null\n",
+      "    kernel_initializer:\n",
+      "      class_name: VarianceScaling\n",
+      "      config: {distribution: uniform, mode: fan_avg, scale: 1.0, seed: null}\n",
+      "    kernel_regularizer: null\n",
+      "    name: dense_11\n",
+      "    trainable: true\n",
+      "    units: 64\n",
+      "    use_bias: true\n",
+      "- class_name: Dense\n",
+      "  config:\n",
+      "    activation: softmax\n",
+      "    activity_regularizer: null\n",
+      "    bias_constraint: null\n",
+      "    bias_initializer:\n",
+      "      class_name: Zeros\n",
+      "      config: {}\n",
+      "    bias_regularizer: null\n",
+      "    kernel_constraint: null\n",
+      "    kernel_initializer:\n",
+      "      class_name: VarianceScaling\n",
+      "      config: {distribution: uniform, mode: fan_avg, scale: 1.0, seed: null}\n",
+      "    kernel_regularizer: null\n",
+      "    name: dense_12\n",
+      "    trainable: true\n",
+      "    units: 10\n",
+      "    use_bias: true\n",
+      "keras_version: 2.2.0\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = keras.Sequential()\n",
+    "# Adds a densely-connected layer with 64 units to the model:\n",
+    "model.add(keras.layers.Dense(64, activation='relu'))\n",
+    "# Add another:\n",
+    "model.add(keras.layers.Dense(64, activation='relu'))\n",
+    "# Add a softmax layer with 10 output units:\n",
+    "model.add(keras.layers.Dense(10, activation='softmax'))\n",
+    "print(model.to_yaml())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor([[4.]], shape=(1, 1), dtype=float32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def my_py_func(x):\n",
+    "    x = tf.matmul(x, x)  # You can use tf ops\n",
+    "    print(x)  # but it's eager!\n",
+    "    return x\n",
+    "\n",
+    "with tf.Session() as sess:\n",
+    "    x = tf.placeholder(dtype=tf.float32)\n",
+    "    # Call eager function in graph!\n",
+    "    #x = tfe.Variable([[2]])\n",
+    "    pf = tfe.py_func(my_py_func, [x], tf.float32)\n",
+    "    sess.run(pf, feed_dict={x: [[2.0]]})  # [[4.0]]"
    ]
   },
   {
@@ -107,6 +224,7 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -526,7 +644,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
