reimplement download and extract tf functions

--- a/database-pipeline.ipynb
+++ b/database-pipeline.ipynb
@@ -13,19 +13,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "import os\n",
     "import tensorflow as tf\n",
     "from tensorflow import keras"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +55,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset_path = os.path.join(os.getcwd(), 'cifar10-data')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {
     "scrolled": false
    },
@@ -63,43 +73,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Download from https://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz and extract.\n",
-      "WARNING:tensorflow:From ./cifar10/generate_cifar10_tfrecords.py:43: maybe_download (from tensorflow.contrib.learn.python.learn.datasets.base) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Please write your own downloading logic.\n",
-      "Generating /opt/notebooks/keras-experiments/cifar-10-data/train.tfrecords\n",
-      "Generating /opt/notebooks/keras-experiments/cifar-10-data/validation.tfrecords\n",
-      "Generating /opt/notebooks/keras-experiments/cifar-10-data/eval.tfrecords\n",
+      "Download from https://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz and extract to /opt/notebooks/keras-experiments/cifar10-data.\n",
+      "Successfully downloaded cifar-10-python.tar.gz 170498071 bytes.\n",
+      "Generating /opt/notebooks/keras-experiments/cifar10-data/train.tfrecords\n",
+      "Generating /opt/notebooks/keras-experiments/cifar10-data/validation.tfrecords\n",
+      "Generating /opt/notebooks/keras-experiments/cifar10-data/eval.tfrecords\n",
       "Done!\n"
      ]
     }
    ],
    "source": [
-    "!python ./cifar10/generate_cifar10_tfrecords.py --data-dir=${PWD}/cifar-10-data"
+    "!python ./cifar10/generate_cifar10_tfrecords.py --data-dir=\"$dataset_path\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Show downloaded files"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total 374176\r\n",
-      "drwxr-xr-x  7 root root       224 Aug 18 22:27 .\r\n",
-      "drwxr-xr-x 17 root root       544 Aug 18 22:26 ..\r\n",
-      "drwxr-xr-x 10 2156 1103       320 Jun  4  2009 cifar-10-batches-py\r\n",
-      "-rw-r--r--  1 root root 170498071 Aug 18 22:25 cifar-10-python.tar.gz\r\n",
-      "-rw-r--r--  1 root root  31260000 Aug 18 22:27 eval.tfrecords\r\n",
-      "-rw-r--r--  1 root root 125040000 Aug 18 22:27 train.tfrecords\r\n",
-      "-rw-r--r--  1 root root  31260000 Aug 18 22:27 validation.tfrecords\r\n"
+      "ls: cannot access $/opt/notebooks/keras-experiments/cifar10-data: No such file or directory\r\n"
      ]
     }
    ],
    "source": [
-    "!ls -la cifar-10-data"
+    "!ls -la ${dataset_path}"
    ]
   },
   {
