--- a/database-pipeline.ipynb
+++ b/database-pipeline.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
@@ -73,12 +73,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Download from https://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz and extract to /opt/notebooks/keras-experiments/cifar10-data.\n",
-      "Successfully downloaded cifar-10-python.tar.gz 170498071 bytes.\n",
-      "Generating /opt/notebooks/keras-experiments/cifar10-data/train.tfrecords\n",
-      "Generating /opt/notebooks/keras-experiments/cifar10-data/validation.tfrecords\n",
-      "Generating /opt/notebooks/keras-experiments/cifar10-data/eval.tfrecords\n",
-      "Done!\n"
+      "INFO:__main__:Download from https://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz and extract to /opt/notebooks/keras-experiments/cifar10-data.\r\n"
      ]
     }
    ],
@@ -95,19 +90,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ls: cannot access $/opt/notebooks/keras-experiments/cifar10-data: No such file or directory\r\n"
+      "total 373888\r\n",
+      "drwxr-xr-x  7 root root       224 Aug 19 13:31 .\r\n",
+      "drwxr-xr-x 15 root root       480 Aug 19 13:32 ..\r\n",
+      "drwxr-xr-x 10 2156 1103       320 Jun  4  2009 cifar-10-batches-py\r\n",
+      "-rw-r--r--  1 root root 170498071 Aug 19 13:31 cifar-10-python.tar.gz\r\n",
+      "-rw-r--r--  1 root root  31260000 Aug 19 13:31 eval.tfrecords\r\n",
+      "-rw-r--r--  1 root root 125040000 Aug 19 13:31 train.tfrecords\r\n",
+      "-rw-r--r--  1 root root  31260000 Aug 19 13:31 validation.tfrecords\r\n"
      ]
     }
    ],
    "source": [
-    "!ls -la ${dataset_path}"
+    "!ls -la \"$dataset_path\""
    ]
   },
   {
