define log level by parameter

--- a/database-pipeline.ipynb
+++ b/database-pipeline.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
@@ -73,7 +73,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:__main__:Download from https://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz and extract to /opt/notebooks/keras-experiments/cifar10-data.\r\n"
+      "INFO:__main__:Download from https://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz and extract to /opt/notebooks/keras-experiments/cifar10-data.\n",
+      "INFO:__main__:Generating /opt/notebooks/keras-experiments/cifar10-data/train.tfrecords\n",
+      "INFO:__main__:Generating /opt/notebooks/keras-experiments/cifar10-data/validation.tfrecords\n",
+      "INFO:__main__:Generating /opt/notebooks/keras-experiments/cifar10-data/eval.tfrecords\n",
+      "INFO:__main__:Done!\n"
      ]
     }
    ],
@@ -90,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -98,13 +102,13 @@
      "output_type": "stream",
      "text": [
       "total 373888\r\n",
-      "drwxr-xr-x  7 root root       224 Aug 19 13:31 .\r\n",
-      "drwxr-xr-x 15 root root       480 Aug 19 13:32 ..\r\n",
+      "drwxr-xr-x  7 root root       224 Aug 19 13:40 .\r\n",
+      "drwxr-xr-x 15 root root       480 Aug 19 13:40 ..\r\n",
       "drwxr-xr-x 10 2156 1103       320 Jun  4  2009 cifar-10-batches-py\r\n",
       "-rw-r--r--  1 root root 170498071 Aug 19 13:31 cifar-10-python.tar.gz\r\n",
-      "-rw-r--r--  1 root root  31260000 Aug 19 13:31 eval.tfrecords\r\n",
-      "-rw-r--r--  1 root root 125040000 Aug 19 13:31 train.tfrecords\r\n",
-      "-rw-r--r--  1 root root  31260000 Aug 19 13:31 validation.tfrecords\r\n"
+      "-rw-r--r--  1 root root  31260000 Aug 19 13:40 eval.tfrecords\r\n",
+      "-rw-r--r--  1 root root 125040000 Aug 19 13:40 train.tfrecords\r\n",
+      "-rw-r--r--  1 root root  31260000 Aug 19 13:40 validation.tfrecords\r\n"
      ]
     }
    ],
